# backend/mkdi_backend/api/v1/transactions/transactions.py
@@ -3,13 +3,28 @@
 from typing import Annotated, List
 
 from fastapi import APIRouter, Depends, Security
-from mkdi_backend.api.deps import check_authorization, get_db
+from mkdi_backend.api.deps import check_authorization, get_db, AsyncDBSessionDep
 from mkdi_backend.models.models import KcUser
 from mkdi_backend.repositories.transactions import TransactionRepository
 from mkdi_shared.schemas import protocol
+from sqlalchemy.ext.asyncio import AsyncSession
 from sqlmodel import Session
 
 router = APIRouter()
+
+
+@router.get(
+    "/office/transactions",
+    response_model=List[protocol.TransactionResponse],
+    status_code=200,
+)
+async def get_office_transactions(
+    *,
+    user: Annotated[KcUser, Security(check_authorization, scopes=[])],
+    db: AsyncDBSessionDep,
+) -> list[protocol.TransactionResponse]:
+    """get all transactions for an office"""
+    return await TransactionRepository(db).get_office_transactions(user)
 
 
 @router.get(
@@ -70,3 +85,31 @@ def get_transaction(
 ) -> protocol.TransactionResponse:
     """get a single transaction"""
     return TransactionRepository(db).get_transaction(user, code)
+
+
+@router.put("/transaction/{code}")
+def update_transaction(
+    *,
+    user: Annotated[KcUser, Security(check_authorization, scopes=[])],
+    code: str,
+    usr_input: protocol.TransactionRequest,
+    db: Session = Depends(get_db),
+) -> protocol.TransactionResponse:
+    """update a transaction"""
+    return TransactionRepository(db).update_transaction(user, code, usr_input)
+
+
+@router.post(
+    "/transaction/{code}/pay",
+    response_model=protocol.PaymentResponse,
+    status_code=200,
+)
+async def add_payment(
+    *,
+    user: Annotated[KcUser, Security(check_authorization, scopes=[])],
+    code: str,
+    usr_input: protocol.PaymentRequest,
+    db: AsyncDBSessionDep,
+) -> protocol.PaymentResponse:
+    """add payment to a transaction"""
+    return await TransactionRepository(db).add_payment(user, code, usr_input)
